# security-log-scan

./: .gitignore  AI-COLLABORATION.md  LICENSE  README.md  pyproject.toml  rules.yaml
.github/workflows/: ci.yml
src/security_log_scan/: __init__.py  cli.py  config.py  correlation.py  engine.py  follow.py  models.py
src/security_log_scan/parsers/: __init__.py  auth_log.py  base.py  web_access.py
src/security_log_scan/reporting/: __init__.py  json_report.py  text.py
src/security_log_scan/rules/: __init__.py  base.py  brute_force_ssh.py  brute_force_web.py  path_traversal.py  privilege_escalation.py  rate_limit_abuse.py  sensitive_path_scan.py  sql_injection.py
tests/integration/: test_cli_end_to_end.py
tests/unit/: test_cli_follow.py  test_config.py  test_correlation.py  test_engine.py  test_follow.py  test_memory_bounds.py  test_models.py  test_parsers.py  test_rules.py
